--- a/voronoi.html
+++ b/voronoi.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Voronoi Generator</title>
+  <script type="text/javascript" src="parallelWorkers.js"></script>
   <script type="text/javascript">//<![CDATA[
     "use strict";
 
@@ -232,28 +233,7 @@
       console.log(`${elapsed / 1000}s`);
     }
 
-    const fnsToInclude = [workerFn, findClosestPoint, sqDistanceTo];
-    const workerParams = workerFn.toString().match(/\(([^\)]+)\)/)[1];
-    const workers = [];
-    console.log(`${navigator.hardwareConcurrency} workers available`)
-    for (let i = 0; i < navigator.hardwareConcurrency; i++) {
-      let workerScript = fnsToInclude.map(fn => fn.toString()).join('\n') + '\n';
-      workerScript += `onmessage = (e) => {
-          const {${workerParams}} = e.data[0];
-          const result = workerFn(${workerParams});
-          postMessage([result]);}`;
-      const blob = new Blob([workerScript], { type: 'application/javascript' });
-      const worker = new Worker(URL.createObjectURL(blob));
-      worker.runAsync = function (data) {
-        this.postMessage([data]);
-        return new Promise((resolve, reject) => {
-          this.onmessage = (e) => {
-            resolve(e.data[0]);
-          }
-        })
-      }
-      workers.push(worker);
-    }
+    const workers = initWorkers(workerFn, [findClosestPoint, sqDistanceTo]);
 
     function workerFn(start, end, width, points) {
       const colorData = [];
