--- a/glMandelbrot.html
+++ b/glMandelbrot.html
@@ -3,6 +3,7 @@
     <head>
         <title>WebGL Mandelbrot</title>
         <script type="text/javascript" src="2dshader.js"></script>
+        <script type="text/javascript" src="parallelWorkers.js"></script>
         <script type="text/javascript">
             "use strict";
 
@@ -124,13 +125,26 @@
                 draw();
             });
 
+            const iterations = 1000;
+            const colorBandwidth = 600;
+
+            const gradient = complexGradient(
+                    [0xFF, 0x00, 0x00, 0xFF],
+                    [0xFF, 0xFF, 0x00, 0xFF],
+                    [0x00, 0xFF, 0x00, 0xFF],
+                    [0x00, 0xFF, 0xFF, 0xFF],
+                    [0x00, 0x00, 0xFF, 0xFF],
+                    [0xFF, 0x00, 0xFF, 0xFF],
+                    [0xFF, 0x00, 0x00, 0xFF],);
+
             function drawFractal(canvas, originX, originY, viewWidth, juliaMode, juliaX, juliaY) {
                 const gl = canvas.getContext("webgl");
 
                 const fsSource = `
                     precision highp float;
-                    const int iterations = 1000;
-                    const float colorBandwidth = 600.0;
+                    #define cproduct(a, b) vec2(a.x*b.x-a.y*b.y, a.x*b.y+a.y*b.x)
+                    const int iterations = ${iterations};
+                    const float colorBandwidth = ${colorBandwidth}.0;
                     uniform bool juliaMode;
                     uniform vec2 juliaCoord;
                     uniform vec2 resolution;
@@ -142,6 +156,13 @@
                         float colorIndex = mod(float(index), colorBandwidth) / colorBandwidth;
                         vec2 uv = vec2(colorIndex, 0.5);
                         return texture2D(colorMap, uv);
+                    }
+
+                    vec2 cpow(vec2 z, float n) {
+                        float r = length(z);
+                        float t = atan(z.y, z.x);
+                        float rp = pow(r, n);
+                        return rp * vec2(cos(n * t), sin(n * t));
                     }
 
                     void main() {
@@ -160,10 +181,19 @@
                             c = uv;
                         }
                         gl_FragColor = vec4(0.0, 0.0, 0.0, 1.0);
+                        vec2 z2 = z * z;
+                        if((z2.x + z2.y) > 4.0){
+                            gl_FragColor = vec4(1.0);
+                            return;
+                        }
                         for(int i = 0; i < iterations; i++){
-                            z = vec2((z.x * z.x) - (z.y * z.y), 2.0 * z.x * z.y) + c;
-                            if(length(z) > 2.0){
+                            //z = cpow(z, 5.0) + c;
+                            //z = cproduct(z, z) + c;
+                            z = vec2(z2.x - z2.y, (z.x + z.x) * z.y) + c;
+                            z2 = z * z;
+                            if((z2.x + z2.y) > 4.0){
                                 gl_FragColor = getColor(i);
+                                return;
                             }
                         }
                     }
@@ -176,15 +206,6 @@
                     gl.uniform1i(gl.getUniformLocation(shaderProgram, "juliaMode"), juliaMode);
                     gl.uniform2f(gl.getUniformLocation(shaderProgram, "juliaCoord"), juliaX, juliaY);
 
-                    const gradient = complexGradient(
-                        [0xFF, 0x00, 0x00, 0xFF],
-                        [0xFF, 0xFF, 0x00, 0xFF],
-                        [0x00, 0xFF, 0x00, 0xFF],
-                        [0x00, 0xFF, 0xFF, 0xFF],
-                        [0x00, 0x00, 0xFF, 0xFF],
-                        [0xFF, 0x00, 0xFF, 0xFF],
-                        [0xFF, 0x00, 0x00, 0xFF],);
-
                     const colorData = new Uint8Array(gradient.flat());
 
                     const colorTexture = gl.createTexture();
@@ -194,6 +215,114 @@
                     gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
                     gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, colorData.length / 4, 1, 0, gl.RGBA, gl.UNSIGNED_BYTE, colorData);
                 });
+            }
+
+            function getColor(index) {
+                const colorIndex = (index % colorBandwidth) / colorBandwidth;
+                return gradient[Math.floor(colorIndex * gradient.length)];
+            }
+
+            function iterate(x, y, juliaMode, juliaX, juliaY) {
+                let zr, zi, cr, ci;
+                if(juliaMode) {
+                    zr = x;
+                    zi = y;
+                    cr = juliaX;
+                    ci = juliaY;
+                }
+                else {
+                    
+                    zr = 0;
+                    zi = 0;
+                    cr = x;
+                    ci = y;
+                }
+                let color = [0x00, 0x00, 0x00, 0xFF];
+                for(let i = 0; i < iterations; i++) {
+                    const temp = zr * zr - zi * zi + cr;
+                    zi = 2 * zr * zi + ci;
+                    zr = temp;
+                    if((zr * zr + zi * zi) > 4) {
+                        color = getColor(i);
+                        break;
+                    }
+                }
+                return color;
+            }
+
+            function drawFractalNonGL(canvas, originX, originY, viewWidth, juliaMode, juliaX, juliaY) {
+                const startTime = new Date();
+
+                const ctx = canvas.getContext("2d");
+                const imgData = ctx.createImageData(canvas.width, canvas.height);
+
+                function applyColorToImage(x, y, color) {
+                    const i = 4 * (y * canvas.width + x);
+                    imgData.data[i] = color[0];
+                    imgData.data[i + 1] = color[1];
+                    imgData.data[i + 2] = color[2];
+                    imgData.data[i + 3] = 255;
+                }
+
+                const scaleFactor = viewWidth / canvas.width;
+                for(let r = 0; r < canvas.height; r++) {
+                    const y = r * scaleFactor + originY;
+                    for(let c = 0; c < canvas.width; c++) {
+                        const x = c * scaleFactor + originX;
+                        applyColorToImage(c, r, iterate(x, y, juliaMode, juliaX, juliaY));
+                    }
+                }
+                console.log(imgData.data.slice(0, 4));
+                ctx.putImageData(imgData, 0, 0);
+                const elapsed = (new Date()) - startTime;
+                console.log(`${elapsed / 1000}s`);
+            }
+
+            const workers = initWorkers(workerFn, [getColor, iterate], {iterations, colorBandwidth, gradient});
+
+            function workerFn(start, end, width, originX, originY, viewWidth, juliaMode, juliaX, juliaY) {
+                const colorData = [];
+                const scaleFactor = viewWidth / width;
+                for(let r = start; r < end; r++) {
+                    const colorRow = [];
+                    const y = r * scaleFactor + originY;
+                    for(let c = 0; c < width; c++) {
+                        const x = c * scaleFactor + originX;
+                        colorRow.push(iterate(x, y, juliaMode, juliaX, juliaY));
+                    }
+                    colorData.push(colorRow);
+                }
+                return colorData;
+            }
+
+            async function drawFractalParallel(canvas, originX, originY, viewWidth, juliaMode, juliaX, juliaY) {
+                const startTime = new Date();
+
+                const ctx = canvas.getContext("2d");
+                const imgData = ctx.createImageData(canvas.width, canvas.height);
+                function applyColorToImage(x, y, color) {
+                    const i = 4 * (y * canvas.width + x);
+                    imgData.data[i] = color[0];
+                    imgData.data[i + 1] = color[1];
+                    imgData.data[i + 2] = color[2];
+                    imgData.data[i + 3] = 255;
+                }
+                const chunkSize = Math.ceil(canvas.height / workers.length);
+                await Promise.all(workers.map((worker, i) => {
+                    const start = i * chunkSize;
+                    const end = Math.min(start + chunkSize, canvas.height);
+                    return worker.runAsync({ start, end, width: canvas.width, originX, originY, viewWidth, juliaMode, juliaX, juliaY })
+                        .then(colorData => {
+                            for (let y = 0; y < colorData.length; y++) {
+                                for (let x = 0; x < canvas.width; x++) {
+                                    applyColorToImage(x, y + start, colorData[y][x]);
+                                }
+                            }
+                        });
+                }));
+                ctx.putImageData(imgData, 0, 0);
+                const elapsed = (new Date()) - startTime;
+                console.log(`${elapsed / 1000}s`);
             }
 
             function linearGradient(start, finish, steps) {
