Restore WebGL functionality

--- a/glMandelbrot.html
+++ b/glMandelbrot.html
@@ -119,7 +119,7 @@
                 }
 
                 function draw() {
-                    drawFractalParallel(canvas, originX, originY, viewWidth, juliaMode, juliaX, juliaY);
+                    drawFractal(canvas, originX, originY, viewWidth, juliaMode, juliaX, juliaY);
                 }
 
                 draw();
